helloworld/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: helloworld
  labels:
    name: helloworld
