helloworld/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: helloworld
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app:  hello-world
