helloworld/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world
  namespace: helloworld
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`hello.gerh.co.uk`)
    priority: 10
    services:
    - kind: Service
      name: hello-world
      namespace: helloworld
      port: 80
